--- a/ustaad-jee.github.io/package.json
+++ b/ustaad-jee.github.io/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ustaad-jee.github.io",
   "version": "0.1.0",
+  "homepage": "https://Ustaad-Jee.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -14,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
